# SS3

./: .gitignore  .gitmodules  README.md
3D/: Stand.f3d  WMRP Handle.f3d  WXUP Handle.f3d
PCBS/SS3/: 7SEG.kicad_sch  HSSwitch.kicad_sch  MCU.kicad_sch  SS3-Display.kicad_pcb  SS3-Display.kicad_prl  SS3-Display.kicad_pro  SS3-Display.kicad_sch  SS3-Power.kicad_pcb  SS3-Power.kicad_prl  SS3-Power.kicad_pro  SS3-Power.kicad_sch  fp-lib-table  sym-lib-table
PCBS/SS3/lib/: 10127720-061LF.kicad_mod  20021511-00010T4LF.kicad_mod  BF030-20A-B1-0360.kicad_mod  BF050-20-A-B.kicad_mod  BF100-20-A-D-1-0640.kicad_mod  MountingHole_2mm_M1.8_Pad.kicad_mod  NVMFD5C672NLT1G.kicad_mod  NVMFD5C672NLT1G.kicad_sym  PEC12R-4022F-S0024.kicad_mod  Project.kicad_sym  TB001-500-04BE.kicad_mod  TDCR1050M.kicad_mod
PCBS/handle/: fp-lib-table  handle-V2-eagle-import.kicad_sym  handle-V2-sim.kicad_pcb  handle-V2-sim.kicad_prl  handle-V2-sim.kicad_pro  handle-V2.kicad_pcb  handle-V2.kicad_prl  handle-V2.kicad_pro  handle-V2.kicad_sch  sym-lib-table
PCBS/handle/handle-V2.pretty/: 5-1,8.kicad_mod  R0805.kicad_mod  REED_SWITCH_PLASTIC.kicad_mod  SMD1,27-2,54.kicad_mod
PCBS/wmrt_handle/: fp-lib-table  sym-lib-table  wmrt_handle-eagle-import.kicad_sym  wmrt_handle.kicad_pcb  wmrt_handle.kicad_prl  wmrt_handle.kicad_pro  wmrt_handle.kicad_sch
PCBS/wmrt_handle/wmrt_handle.pretty/: 09-9792-20-05_BINDER.kicad_mod  JAKA_SILK_NANO.kicad_mod  P1-13-R.kicad_mod  R0805.kicad_mod  RI-80_SMDM_J-1.kicad_mod  SOT-23.kicad_mod
SIMS/: ALIM.asc  BAT42WS.lib  BBMOSFET.asc  NTMFD5C672NL.LIB  SMCJ36CA.lib  TPS54202.LIB  TPS54202.asy  TPS7A2033.asy  TPS7A2033.lib  ZCD.asc
SS3/: .ccsproject  .clang-format  .cproject  .project  CMakeLists.txt  SS3.syscfg  acquisition.c  acquisition.h  adc.c  adc.h  board.h  button.c  button.h  cached_value.h  calibration.c  calibration.h  circbuf.h  configuration.c  configuration.h  device_linker.cmd  display.c  display.h  eeprom.c  eeprom.h  eeprom_config.h  heat.c  heat.h  interpolate2d.h  iron.c  iron.h  main.c  main.h  medianfilter.h  pt.h  seg7.c  seg7.h  simulation.c  simulation.h  st7789.c  st7789.cpp  (+11 more)
SS3/arduino/: Arduino.h  Arduino_MSPM0SPIDMA.cpp  Arduino_MSPM0SPIDMA.h  Print.h  SPI.h  Wire.h
SS3/cmake/: SysConfig.cmake  TITools.cmake  U8g2Font.cmake
SS3/resources/: InconsolataLGC-Bold-24.bdf  InconsolataLGC-Bold-48.bdf  InconsolataLGC-Bold-60.bdf  InconsolataLGC-Bold.sfd  Logisoso-160.bdf  Logisoso-32.bdf  Logisoso-64.bdf  Logisoso.sfd
SS3/ti/eeprom/emulation_type_b/: eeprom_emulation_type_b.h
SS3/tools/: bdfconv
freertos/: .ccsproject  .cproject  .project  FreeRTOSConfig.h
lvgl/: .ccsproject  .cproject  .project  lv_conf.h
ugfx/: .ccsproject  .cproject  .project  board_ST7789.h  gfxconf.h
ugfx/ST7789/: gdisp_lld_ST7789.c  gdisp_lld_config.h  st7789.h
